--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <p>Conteúdo: <input type="text" id="textInput"></p>
         <p>Frente: <input type="color" id="foreInput" value="#000000"></p>
         <p>Fundo: <input type="color" id="backInput" value="#ffffff"></p>
+        <p><input type="button" id="saveInput" value="Salvar"></p>
     </div>
 
     <div id="output"></div>
