--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
+    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script> <!-- vue.global.prod.js -->
+    <script src="https://unpkg.com/qr-code-styling@1.5.0/lib/qr-code-styling.js"></script>
     <title>Gerador de Códigos QR</title>
 </head>
 <body>
@@ -17,7 +19,6 @@
 
     <div id="output"></div>
 
-    <script src="qrcode.min.js"></script>
     <script src="index.js"></script>
 </body>
 </html>
