--- a/index.html
+++ b/index.html
@@ -10,14 +10,18 @@
     <title>Gerador de Códigos QR</title>
 </head>
 <body>
-    <div id="input">
-        <p>Conteúdo: <input type="text" id="textInput"></p>
-        <p>Frente: <input type="color" id="foreInput" value="#000000"></p>
-        <p>Fundo: <input type="color" id="backInput" value="#ffffff"></p>
-        <p><input type="button" id="saveInput" value="Salvar"></p>
-    </div>
+    <div id="app">
+        <div class="in">
+            <div class="field">
+                <input type="text" v-model="data" @input="update" required>
+                <span class="label">Conteúdo</span>
+            </div>
+        </div>
 
-    <div id="output"></div>
+        <div class="out">
+            <div id="output"></div>
+        </div>
+    </div>
 
     <script src="index.js"></script>
 </body>
